Clean up CompetitionQueue