@@ -7,57 +7,74 @@ import java.util.*;
 public class CompetitionQueue {
 
     Map<Integer, Competition> competitions;
-    List<String> days = Arrays.asList("MONDAY", "TUESDAY", "WEDNESDAY", "THURSDAY", "FRIDAY", "SATURDAY", "SUNDAY");
+    List<String> days = List.of("MONDAY", "TUESDAY", "WEDNESDAY", "THURSDAY", "FRIDAY", "SATURDAY", "SUNDAY");
 
     public void load() {
         competitions = new TreeMap<>();
         CompetitionConfig competitionConfig = CompetitionConfig.getInstance();
-        // Competitions exist in the competitions.yml
-        if (competitionConfig.getCompetitions() != null) {
-            for (String comp : competitionConfig.getCompetitions()) {
 
-                CompetitionType type = competitionConfig.getCompetitionType(comp);
-                Competition competition = new Competition(competitionConfig.getCompetitionDuration(comp) * 60, type, competitionConfig.getCompetitionStartCommands(comp));
+        Set<String> configuredCompetitions = competitionConfig.getCompetitions();
 
-                competition.setCompetitionName(comp);
-                competition.setAdminStarted(false);
-                competition.initAlerts(comp);
-                competition.initRewards(comp, false);
-                competition.initBar(comp);
-                competition.initGetNumbersNeeded(comp);
-                competition.initStartSound(comp);
+        if (configuredCompetitions.isEmpty()) {
+            return;
+        }
 
-                if (competitionConfig.specificDayTimes(comp)) {
-                    for (String day : competitionConfig.activeDays(comp)) {
-                        for (String time : competitionConfig.getDayTimes(comp, day)) {
-                            competitions.put(generateTimeCode(day, time), competition);
-                        }
-                    }
-                } else if (competitionConfig.doingRepeatedTiming(comp)) {
-                    if (competitionConfig.hasBlacklistedDays(comp)) {
-                        List<String> blacklistedDays = competitionConfig.getBlacklistedDays(comp);
-                        for (String time : competitionConfig.getRepeatedTiming(comp)) {
-                            for (String day : days) {
-                                if (!blacklistedDays.contains(day)) {
-                                    competitions.put(generateTimeCode(day, time), competition);
-                                }
-                            }
-                        }
-                    } else {
-                        for (String time : competitionConfig.getRepeatedTiming(comp)) {
-                            for (String day : days) {
-                                competitions.put(generateTimeCode(day, time), competition);
-                            }
-                        }
-                    }
-                }
+        configuredCompetitions.forEach(comp -> {
+            Competition competition = createCompetition(comp, competitionConfig);
+
+            if (competitionConfig.specificDayTimes(comp)) {
+                loadSpecificDayTimes(comp, competitionConfig, competition);
+            } else if (competitionConfig.doingRepeatedTiming(comp)) {
+                loadRepeatedTiming(comp, competitionConfig, competition);
+            }
+        });
+    }
+
+    private Competition createCompetition(String comp, CompetitionConfig competitionConfig) {
+        CompetitionType type = competitionConfig.getCompetitionType(comp);
+        Competition competition = new Competition(
+                competitionConfig.getCompetitionDuration(comp) * 60,
+                type,
+                competitionConfig.getCompetitionStartCommands(comp)
+        );
+
+        competition.setCompetitionName(comp);
+        competition.setAdminStarted(false);
+        competition.initAlerts(comp);
+        competition.initRewards(comp, false);
+        competition.initBar(comp);
+        competition.initGetNumbersNeeded(comp);
+        competition.initStartSound(comp);
+
+        return competition;
+    }
+
+    private void loadSpecificDayTimes(String comp, CompetitionConfig competitionConfig, Competition competition) {
+        for (String day : competitionConfig.activeDays(comp)) {
+            for (String time : competitionConfig.getDayTimes(comp, day)) {
+                competitions.put(generateTimeCode(day, time), competition);
+            }
+        }
+    }
+
+    private void loadRepeatedTiming(String comp, CompetitionConfig competitionConfig, Competition competition) {
+        List<String> repeatedTimes = competitionConfig.getRepeatedTiming(comp);
+        List<String> daysToUse = new ArrayList<>(days);
+
+        if (competitionConfig.hasBlacklistedDays(comp)) {
+            daysToUse.removeAll(competitionConfig.getBlacklistedDays(comp));
+        }
+
+        for (String time : repeatedTimes) {
+            for (String day : daysToUse) {
+                competitions.put(generateTimeCode(day, time), competition);
             }
         }
     }
 
     // Converts "Wednesday, 14:30" for example, into the minute of the week, Wednesday 14:30 becomes (24*60*2) + (14*60) + 30
     // day = the day, tfh = 24h format, like 14:30 or 08:15
-    public Integer generateTimeCode(String day, String tfh) {
+    public int generateTimeCode(String day, String tfh) {
         // Gets how many minutes have passed before midnight of the "day" variable
         int beginning = days.indexOf(day.toUpperCase()) * 24 * 60;
 
@@ -92,25 +109,30 @@ public class CompetitionQueue {
      * @return The next competition starting timecode.
      */
     public int getNextCompetition() {
-        Competition competition = new Competition(-1, CompetitionType.LARGEST_FISH, new ArrayList<>());
         int currentTimeCode = AutoRunner.getCurrentTimeCode();
-        if (this.competitions.containsKey(currentTimeCode)) return currentTimeCode;
-        this.competitions.put(currentTimeCode, competition);
-        int position = new ArrayList<>(this.competitions.keySet()).indexOf(currentTimeCode);
-        if (position == this.competitions.size() - 1) {
-            this.competitions.remove(currentTimeCode);
-            return this.competitions.keySet().iterator().next();
+
+        if (competitions.containsKey(currentTimeCode)) {
+            return currentTimeCode;
+        }
+
+        Competition competition = new Competition(-1, CompetitionType.LARGEST_FISH, new ArrayList<>());
+        competitions.put(currentTimeCode, competition);
+
+        int nextTimeCode = findNextCompetitionTimeCode(currentTimeCode);
+
+        competitions.remove(currentTimeCode);
+        return nextTimeCode;
+    }
+
+    private int findNextCompetitionTimeCode(int currentTimeCode) {
+        List<Integer> timeCodes = new ArrayList<>(competitions.keySet());
+        int position = timeCodes.indexOf(currentTimeCode);
+
+        if (position == competitions.size() - 1) {
+            return timeCodes.get(0);
         } else {
-            int i = 0;
-            for (Map.Entry<Integer, Competition> integerCompetitionEntry : this.competitions.entrySet()) {
-                if (i == position + 1) {
-                    this.competitions.remove(currentTimeCode);
-                    return integerCompetitionEntry.getKey();
-                }
-                i++;
-            }
-            this.competitions.remove(currentTimeCode);
-            return -1;
+            return timeCodes.get(position + 1);
         }
     }
+
 }
